# cymbiont

./: .clippy.toml  .gitignore  .gitmodules  .mcp.example.json  CLAUDE.md  CLAUDE_INSTRUCTIONS_TEMPLATE.md  CONTRIBUTING.md  CYMBIONT_1.0_PLAN.md  CYMBIONT_EMERGENCY_DEPLOYMENT.md  Cargo.toml  DELETING_DATA.md  GRAPHITI_CONFIG.md  MIGRATION_CONTEXT.md  README.md  REMOVAL_LOG.md  backup_emergency_manual.sh  build.rs  config.example.yaml  config.test.yaml  cymbiont_architecture.md  cymbiont_architecture.md.backup  cyrun.sh  cytest.sh  feature_taskpad_aichat_agent_integration.md  feature_taskpad_architectural_overhaul.md  feature_taskpad_integration_testing.md  feature_taskpad_multi_graph_support.md  feature_taskpad_terminal_first_evolution.md  feature_taskpad_transaction_log_wal.md  feature_taskpad_websocket_bidirectional.md
data/transaction_log/: db
docs/: logseq_graph_identification.md  logseq_plugin_api_research.md
hooks/: README.md  generate_codebase_maps.template.py  inject_kg_context.py  monitoring_agent.py  monitoring_protocol.txt  monitoring_worker.py  post-commit.template.sh
logseq_databases/dummy_graph/journals/: 2025_07_23.md  2025_07_24.md  2025_07_28.md
logseq_databases/dummy_graph/logseq/: config.edn
logseq_databases/test_graph_empty/journals/: 2025_07_26.md
logseq_databases/test_graph_sync/journals/: 2025_07_27.md
logseq_plugin/: CLAUDE.md  DEPRECATED.md  api.js  data_processor.js  data_processor.test.js  eslint.config.js  index.html  index.js  jest.config.js  package.json  stress_test_generator.js  sync.js  sync.test.js  websocket.js
src/: api.rs  app_state.rs  cli.rs  cli_registry.rs  client.rs  config.rs  edn.rs  error.rs  graph_manager.rs  graph_operations.rs  graph_registry.rs  graphiti_launcher.rs  kg_api.rs  lib.rs  lock.rs  log_utils.rs  logging.rs  main.rs  mcp_tools.rs  pkm_data.rs  saga.rs  session_manager.rs  transaction.rs  transaction_log.rs  types.rs  utils.rs  websocket.rs
src/agent/: CLAUDE.md  agent.rs  agent_registry.rs  kg_tools.rs  llm.rs  mod.rs  schemas.rs  tools.rs
src/cqrs/: CLAUDE.md  commands.rs  mod.rs  processor.rs  queue.rs  router.rs  wal.rs
src/graph/: CLAUDE.md  graph_manager.rs  graph_operations.rs  graph_registry.rs  mod.rs
src/http_server/: CLAUDE.md  http_api.rs  server.rs  websocket.rs  websocket_utils.rs
src/import/: CLAUDE.md  import_utils.rs  logseq.rs  mod.rs  pkm_data.rs  reference_resolver.rs
src/server/: CLAUDE.md  api.rs  auth.rs  http_api.rs  kg_api.rs  message_queue.rs  mod.rs  server.rs  websocket.rs  websocket_utils.rs
src/storage/: CLAUDE.md  agent_persistence.rs  agent_registry.rs  graph_persistence.rs  graph_registry.rs  mod.rs  recovery.rs  registry_ref.rs  registry_utils.rs  transaction.rs  transaction_coordinator.rs  transaction_log.rs  wal.rs
tests/: CLAUDE.md  DEPRECATED.md  README.md  deployment_manual_doctests.rs  graph_registry_test.rs  integration_test.rs  integration_test_suite.rs  session_management_test.rs  test_http_logseq_import.rs  test_logseq_import.rs  test_websocket_commands.rs
tests/common/: agent_validation.rs  graph_registry_validator.rs  graph_validation.rs  mod.rs  test_harness.rs  test_validator.rs  wal_validation.rs
tests/integration/: agent_commands.rs  agent_tools.rs  cli_commands.rs  crash_recovery.rs  freeze_mechanism.rs  http_logseq_import.rs  logseq_import.rs  main.rs  mcp_server.rs  websocket_commands.rs
tests/integration_tests/: multi_graph_test.rs  sync_test.rs  websocket_test.rs
(+27 files in other folders)
