[package]
name = "cymbiont"
version = "0.1.0"
edition = "2021"
authors = ["Brandt Weary"]
description = "A knowledge graph-enhanced AI agent for personal knowledge management"
repository = "https://github.com/Brandtweary/cymbiont"
license = "AGPL-3.0"





[dependencies]
autodebugger = { path = "autodebugger" }
async-trait = "0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] } 
axum = { version = "0.7.2", features = ["ws", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
ctrlc = "3.4.1"
serde_yaml = "0.9"
relative-path = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
petgraph = { version = "0.6", features = ["serde-1"] }
regex = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
once_cell = "1.21.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower = "0.5"
tempfile = "3.0"
serial_test = "3.0"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
