[package]
name = "cymbiont"
version = "0.1.0"
edition = "2021"
authors = ["Brandt Weary"]
description = "A knowledge graph-enhanced AI agent for personal knowledge management"
repository = "https://github.com/Brandtweary/cymbiont"
license = "AGPL-3.0"





[dependencies]
autodebugger = { path = "autodebugger" }
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] } 
axum = { version = "0.8", features = ["ws", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
serde_yaml = "0.9"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
petgraph = { version = "0.8", features = ["serde-1"] }
regex = "1.11"
futures-util = { version = "0.3", features = ["sink"] }
once_cell = "1.21"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower = "0.5"
tempfile = "3.21"
serial_test = "3.0"
tokio-tungstenite = "0.27"
tungstenite = "0.27"
