[package]
name = "cymbiont"
version = "1.0.0"
edition = "2021"
authors = ["Brandt Weary", "Hector <hector@cymbiont.com>"]
description = "Rust MCP server for Cymbiont knowledge graph system"
license = "AGPL-3.0"

[dependencies]
# MCP SDK (official modelcontextprotocol/rust-sdk)
rmcp = { version = "0.8", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Graphiti backend
reqwest = { version = "0.12", features = ["json"] }

# Serialization and schema generation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rotating file logger with verbosity monitoring
autodebugger = { path = "autodebugger" }

# Platform-specific directories (XDG config dir, etc.)
directories = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
